Optimize water resolver and LOD handling